# lakefs_repo

./: .gitignore  README.md  pyproject.toml
src/: process_data.py
