[tool.poetry]
name = "lakefs-proj"
version = "0.1.0"
description = ""
authors = ["thomasalcock <thomas.alcock@statworx.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
requests = "^2.25.1"
bravado = "10.6.2"
mypy = "^0.812"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
